[ORG-49] added members to dep and desc, resp, dep to project
